--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Satya karthik</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Satya Karthik | AI/ML Engineer" name="keywords">
+    <meta content="Satya Karthik | AI/ML Engineer" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
