images updated and added Quantiphi details

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#qualification" class="nav-item nav-link">Quality</a>
+                <a href="#qualification" class="nav-item nav-link">Qualification</a>
                 <a href="#skill" class="nav-item nav-link">Skill</a>
             </div>
-            <a href="satya_karthik_ML.pdf" class="btn btn-outline-primary d-none d-lg-block">Checkout My CV</a>
+            <a href="https://drive.google.com/file/d/1JBMYgPAwMXa5HgooK2JwjlbmA2_Bm7Rd/view?usp=sharing" class="btn btn-outline-primary d-none d-lg-block"  target="_blank">Checkout My CV</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -80,7 +80,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">AI Engineer, AI Enthusiastic, LLM engineer, Computer Vision Engineer </div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="satya_karthik_ML.pdf" class="btn btn-outline-light mr-5">Checkout My CV</a>
+                        <a href="https://drive.google.com/file/d/1JBMYgPAwMXa5HgooK2JwjlbmA2_Bm7Rd/view?usp=sharing" class="btn btn-outline-light mr-5"  target="_blank">Checkout My CV</a>
                         <!-- <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                             <span></span>
@@ -129,10 +129,10 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Qualification</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Education & Expericence</h1>
             </div>
-            <div class="row align-items-center">
+            <div class="row align-items-top">
                 <div class="col-lg-6">
                     <h3 class="mb-4">My Education</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
@@ -163,8 +163,20 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Associate Architect ML</h5>
+                            <p class="mb-2"><strong>Quantiphi</strong> | <small>2024 - present</small></p>
+                            <p>With expertise in multiple cloud technologies such as Google Cloud Platform (GCP), Amazon Web Services (AWS), and
+                            Snowflake, I specialize in leveraging these platforms to enhance machine learning (ML) capabilities. My focus is on
+                            Machine Learning Operations (MLOps), which streamlines the deployment, monitoring, and maintenance of ML models. This
+                            enables organizations to harness the full potential of their data while ensuring efficient and scalable solutions.
+                            Through my work, I aim to bridge the gap between data science and operational excellence, fostering collaboration and
+                            innovation within teams to drive impactful results.
+                            </p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Technical Specialist</h5>
-                            <p class="mb-2"><strong>Sony India Software Centre</strong> | <small>2021 - present</small></p>
+                            <p class="mb-2"><strong>Sony India Software Centre</strong> | <small>2021 - 2024</small></p>
                             <p>I excelled in AI/ML engineering, leveraging expertise in Generative AI,
                                 SLURM job optimization, and data filtering. Implemented novel systems for code completion,
                                 job scheduling, and image processing. Developed efficient data filtering pipelines
